# uacryptex

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  README.uk.md  composer.json
.github/workflows/: build-ffi.yml  go.yml  miri.yml  release.yml  rust.yml
crates/uacryptex-cli/: Cargo.toml
crates/uacryptex-cli/src/: main.rs
crates/uacryptex-core/: Cargo.toml
crates/uacryptex-core/benches/: crypto.rs
crates/uacryptex-core/examples/: gen_cms_fixtures.rs
crates/uacryptex-core/src/: error.rs  lib.rs
crates/uacryptex-core/src/math/: ec2m.rs  ec_point.rs  ecp.rs  gf2m.rs  gfp.rs  int.rs  int_arith.rs  mod.rs  word.rs
crates/uacryptex-core/src/pki/: creq.rs  crl.rs  mod.rs  oid.rs  utils.rs
crates/uacryptex-core/src/pki/cert/: mod.rs
crates/uacryptex-core/src/pki/cms/: builder.rs  cades.rs  enveloped_data.rs  enveloped_decrypt.rs  enveloped_types.rs  ess.rs  ets.rs  mod.rs  signed_data.rs  signer_info.rs  types.rs
crates/uacryptex-core/src/pki/cms/engine/: enveloped_data.rs  mod.rs  signed_data.rs  signer_info.rs
crates/uacryptex-core/src/pki/crypto/: aid.rs  cipher.rs  dh.rs  digest.rs  mod.rs  prng.rs  session_key.rs  sign.rs  signature_encoding.rs  verify.rs
crates/uacryptex-core/src/pki/engine/: cert.rs  cert_request.rs  crl.rs  mod.rs  ocsp_request.rs  ocsp_response.rs  tsp_request.rs  tsp_response.rs
crates/uacryptex-core/src/pki/ext/: builders.rs  exts.rs  mod.rs  san.rs
crates/uacryptex-core/src/pki/ocsp/: hash.rs  mod.rs  request.rs  response.rs
crates/uacryptex-core/src/pki/tsp/: mod.rs  request.rs  response.rs  status.rs
crates/uacryptex-core/src/primitives/: byte_utils.rs  mod.rs
crates/uacryptex-core/src/primitives/dstu4145/: context.rs  curves.rs  curves_data.rs  dh.rs  mod.rs  onb.rs  onb_data.rs  params.rs  prng.rs  pubkey.rs  sign.rs  verify.rs
crates/uacryptex-core/src/primitives/dstu7564/: hash.rs  kmac.rs  mod.rs
crates/uacryptex-core/src/primitives/dstu7564/kupyna_engine/: long.rs  mod.rs  short.rs  table.rs  utils.rs
crates/uacryptex-core/src/primitives/dstu7624/: cbc.rs  ccm.rs  cfb.rs  cmac.rs  core.rs  ctr.rs  ecb.rs  gcm.rs  gmac.rs  kw.rs  mod.rs  modutil.rs  ofb.rs  tables.rs  xts.rs
crates/uacryptex-core/src/primitives/gost28147/: mod.rs
crates/uacryptex-core/src/primitives/gost3410/: mod.rs  params.rs  pubkey.rs  sign.rs  util.rs  verify.rs
crates/uacryptex-core/src/primitives/gost34_311/: mod.rs
crates/uacryptex-core/src/primitives/intl/: aes.rs  des.rs  ecdsa.rs  hmac.rs  md5.rs  mod.rs  rsa.rs  rsa_oaep.rs  sha1.rs  sha2.rs
crates/uacryptex-core/src/storage/: mod.rs  pkcs5.rs  pkcs8.rs
crates/uacryptex-core/src/storage/pkcs12/: builder.rs  content.rs  mac.rs  mod.rs  types.rs
crates/uacryptex-core/tests/: adapter_kat.rs  cades_kat.rs  cert_engine_kat.rs  cert_kat.rs  cms_kat.rs  crl_engine_kat.rs  crl_kat.rs  dstu4145_kat.rs  dstu7564_kat.rs  dstu7624_kat.rs  enveloped_data_engine_kat.rs  enveloped_data_kat.rs  ext_kat.rs  gost3410_compress_kat.rs  gost3410_kat.rs  gost_kat.rs  math_ec2m_kat.rs  math_gf2m_kat.rs  ocsp_engine_kat.rs  ocsp_request_kat.rs  ocsp_response_kat.rs  pkcs12_ecdsa_kat.rs  pkcs12_kat.rs  pkcs5_kat.rs  pki_example.rs  pki_example_gen.rs  tsp_engine_kat.rs  tsp_request_kat.rs  tsp_response_kat.rs
crates/uacryptex-core/tests/intl_kat/: aes_ecb_full.rs  aes_vectors.rs  des_vectors.rs  main.rs  md5_vectors.rs  rsa_tests.rs  sha1_vectors.rs
crates/uacryptex-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/uacryptex-ffi/src/: buf.rs  cert.rs  cms.rs  crl.rs  csr.rs  digest.rs  dstu4145.rs  enveloped.rs  error.rs  ext.rs  handle.rs  lib.rs  ocsp.rs  pkcs12.rs  pkcs8.rs  sign.rs  tsp.rs  verify.rs  version.rs
crates/uacryptex-ffi/tests/: ffi_pki.rs
dart/uacryptex/: README.md  pubspec.yaml
docs/: API_INVENTORY.md  ARCHITECTURE.md  BINDINGS.md  CERTIFICATION.md  CLIENT_LIBRARIES.md  CRYPTONITE_PARITY.md  CT_REVIEW.md  FFI.md  PACKAGE_MAP.md  PUBLISHING.md  README.md  REPRODUCIBLE_BUILD.md  ROADMAP.md  SECURITY.md  SEMVER.md
docs/uk/: ARCHITECTURE.md  BINDINGS.md  CERTIFICATION.md  CLIENT_LIBRARIES.md  CRYPTONITE_PARITY.md  FFI.md  PUBLISHING.md  (+4 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cert_decode.rs  cms_decode.rs  pkcs12_decode.rs
go/: README.md  go.mod
nodejs/: README.md  package-lock.json  package.json
php/: README.md  composer.json
python/: README.md  pyproject.toml
python/tests/: test_version.py
python/uacryptex/: __init__.py  _native.py  errors.py
python/uacryptex/native/lib/linux/amd64/: .gitkeep
scripts/: bench-ct-scalar-mul.sh  build-ffi-all.sh  build-ffi.sh  build-python-wheel.sh  fetch-native-lib.sh  fuzz.sh  gen_intl_vectors.py  generate-api-inventory.sh  merge-native-artifacts.sh  package-native-lib.sh  platforms.sh  prepare-release.sh  read-version.sh  sync-header.sh  sync-native-libs.sh  sync-version.sh  verify-version.sh
testdata/: README.md
(+62 files in other folders)
