[workspace]
resolver = "2"
members = [
    "crates/uacryptex-core",
    "crates/uacryptex-ffi",
    "crates/uacryptex-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/itcrow/uacryptex"
rust-version = "1.85"

[workspace.dependencies]
thiserror = "2.0"
zeroize = { version = "1.8", features = ["derive"] }
sha1 = "0.10"
sha2 = "0.10"
aes = "0.8"
cbc = "0.1"
cipher = "0.4"
block-padding = "0.3"
md5 = "0.8"
des = "0.8"
p192 = "0.13"
p224 = "0.13"
p256 = "0.13"
p384 = "0.13"
p521 = "0.13"
k256 = { version = "0.13", features = ["ecdsa"] }
rand_core = "0.6"
num-bigint-dig = "0.8"
elliptic-curve = { version = "0.13", features = ["sec1"] }
hmac = "0.12"
der = { version = "0.7", features = ["alloc", "oid"] }
x509-cert = { version = "0.2.5", default-features = false, features = ["std"] }
x509-ocsp = { version = "0.2.1", default-features = false, features = ["std"] }
x509-tsp = "0.1.0"
