[package]
name = "uacryptex-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
uacryptex-core = { path = "../crates/uacryptex-core" }

[[bin]]
name = "cms_decode"
path = "fuzz_targets/cms_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "pkcs12_decode"
path = "fuzz_targets/pkcs12_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cert_decode"
path = "fuzz_targets/cert_decode.rs"
test = false
doc = false
bench = false
